# statusdisplay

./: .gitignore  LICENSE  gcal.py  main.py  pyproject.toml  settings.cfg
assets/: CREDITS.md
