[project]
name = "statusdisplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "pillow>=12.2.0",
    "py-cord>=2.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "inky; sys_platform == 'linux'",
]
